--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 <section id="todoapp">
     <header id="header">
         <h1>todos</h1>
-        {{input type="text" id="new-todo" value=createitem placeholder="What needs to be done?" action=(action 'createItem') autofocus="true"}}
+        <input type="text" id="new-todo"  value={{createitem}} placeholder="What needs to be done?" onkeydown={{action 'createItem'}} autofocus="true">
+        {{!-- <button type="hidden" {{action 'createItem'}}>LOL</button> --}}
+        {{!-- {{input type="text" id="new-todo" value=createitem placeholder="What needs to be done?" key-press=(action 'createItem') autofocus="true"}} --}}
     </header>
     <div>
         {{input type="checkbox" id="toggle-all" style="top: 10px;" checked=checkAll}}
